--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,8 @@
   border-bottom: 1px solid black;
   width: 100%;
   height: 80px;
+  position: fixed;
+  z-index: 1;
 }
 
 .header a {
@@ -32,4 +34,35 @@
 nav span {
   padding: 20px 10px;
   display: inline-block;
+}
+
+.main {
+  display: flex;
+  justify-content: space-between;
+}
+
+.column {
+  margin-top: 80px;
+  display: flex;
+  justify-content: left;
+  align-content: center;
+  flex-wrap: wrap;
+}
+
+.story {
+  border: 1px dotted green;
+}
+.column.large {
+  width: 630px;
+  border: 1px solid black;
+}
+
+.column.medium {
+  width: 300px;
+  border: 1px solid black;
+}
+
+.column.small {
+  width: 240px;
+  border: 1px solid black;
 }
